--- a/about.html
+++ b/about.html
@@ -7,8 +7,7 @@
   <link rel="stylesheet" href="css/all.css">
 </head>
 <body>
-  <h1>這是標題</h1>
+  <h1>這是關於我們</h1>
   <p>協作練習…</p>
-  <a href="about.html">關於我們</a>
 </body>
 </html>
